--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "imurmurhash": "^0.1.4",
     "is-typedarray": "^1.0.0",
+    "normalized-fs": "^1.0.0-alpha.1",
     "signal-exit": "^3.0.2",
     "typedarray-to-buffer": "^3.1.5"
   },
